--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Index</title>
 </head>
 <body>
+  <h1 style="font-family: sans-serif; font-weight: 900">Una página muy bonita</h1>
   Algo bien
 </body>
 </html>
