Cambios en el index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Index</title>
 </head>
 <body>
+  <h1 style="font-family: sans-serif; font-weight: 900">Una página muy bonita</h1>
   Algo bien
+  <p>Este cambio se hizo desde Visual Studio Code (Realmente todos se hicieron desde VS Code pero este es con la terminal de VSCode y se uso la extensión que tiene por defecto para los temas de Git)</p>
 </body>
 </html>
